--- a/master/jade/pages/register.jade
+++ b/master/jade/pages/register.jade
@@ -6,18 +6,18 @@
         img.block-center.img-rounded(src='app/img/logo.png', alt='Image')
     .panel-body
       p.text-center.pv SIGNUP TO GET INSTANT ACCESS.
-      form(role='form', validate-form='', novalidate='', ng-submit="register()").mb-lg
+      form(role='form', validate-form='', novalidate='', ng-submit="handleRegBtnClick()", ng-init="registrationForm = {}").mb-lg
         .form-group.has-feedback
           label.text-muted(for='signupInputEmail1') Email address
-          input#signupInputEmail1.form-control(type='email', placeholder='Enter email', autocomplete="off", ng-model="account.email", required)
+          input#signupInputEmail1.form-control(type='email', placeholder='Enter email', autocomplete="off", ng-model="registrationForm.email", required)
           span.fa.fa-envelope.form-control-feedback.text-muted
         .form-group.has-feedback
           label.text-muted(for='signupInputPassword1') Password
-          input#signupInputPassword1.form-control(type='password', placeholder='Password', autocomplete="off", ng-model="account.password", required)
+          input#signupInputPassword1.form-control(type='password', placeholder='Password', autocomplete="off", ng-model="registrationForm.password", required)
           span.fa.fa-lock.form-control-feedback.text-muted
         .form-group.has-feedback
           label.text-muted(for='signupInputRePassword1') Retype Password
-          input#signupInputRePassword1.form-control(type='password', placeholder='Retype Password', autocomplete="off", ng-model="account.password2", required, data-parsley-equalto="#signupInputPassword1")
+          input#signupInputRePassword1.form-control(type='password', placeholder='Retype Password', autocomplete="off", ng-model="registrationForm.password_confirmation", required, data-parsley-equalto="#signupInputPassword1")
           span.fa.fa-lock.form-control-feedback.text-muted
         .clearfix
           .checkbox.c-checkbox.pull-left.mt0
@@ -29,10 +29,12 @@
         
         button.btn.btn-block.btn-primary.mt-lg(type='submit') Create account
       
-      .alert.alert-danger.text-center(ng-show='authMsg') {{authMsg}}      
+      .alert.alert-danger.text-center(ng-show='errors')
+        .ul(ng-repeat="error in errors track by $index")
+          .li {{error}}
       
       p.pt-lg.text-center Have an account?
-      a(ui-sref="page.login").btn.btn-block.btn-default Signup
+      a(ui-sref="page.login").btn.btn-block.btn-default Login
 
   // END panel
   .p-lg.text-center
