--- a/master/less/app/ngdialog.less
+++ b/master/less/app/ngdialog.less
@@ -3,9 +3,9 @@
 // ========================================================================== 
 
 .ngdialog {
-
+  .ngdialog-content{ width: 540px !important; }
   &.ngdialog-theme-default {
-
+    padding-top: 20px !important;
     .ngdialog-content {
       background-color: #fff !important;
       border-radius: @border-radius-base !important;
