--- a/app/css/app.css
+++ b/app/css/app.css
@@ -13525,6 +13525,12 @@ x:-o-prefocus,
 .nw-content italic {
   font-style: italic;
 }
+.ngdialog .ngdialog-content {
+  width: 540px !important;
+}
+.ngdialog.ngdialog-theme-default {
+  padding-top: 20px !important;
+}
 .ngdialog.ngdialog-theme-default .ngdialog-content {
   background-color: #fff !important;
   border-radius: 4px !important;
@@ -16031,4 +16037,7 @@ flatdoc [role~="flatdoc-content"] > h3 {
   padding: 20px;
   border-top: 1px solid #f1f2f3;
   margin: 0 -20px;
+}
+.ui-datepicker button {
+  font-size: 11px !important;
 }
