--- a/master/jade/views/ar-schedule.jade
+++ b/master/jade/views/ar-schedule.jade
@@ -16,50 +16,6 @@ h3 Schedule Client Appointments
       .row
         .col-md-12.col-sm-6.col-xs-12.co-xs-push-12
           datepicker.ui-datepicker.well.well-sm(ng-model='dt', min-date='minDate', show-weeks='false' ng-click='datePicked(dt)')
-        .col-md-12.col-sm-6.col-xs-12.co-xs-pull-12
-          // START panel
-          .panel.panel-default
-            .panel-heading
-              h4.panel-title Draggable Events
-            // Default external events list
-            .external-events-trash
-              .panel-body
-                .external-events
-                  .bg-green Lunch
-                  .bg-danger Go home
-                  .bg-info Do homework
-                  .bg-warning Work on UI design
-                  .bg-inverse Sleep tight
-                p
-                  span.checkbox.c-checkbox
-                    label
-                      input#remove-after-drop(type='checkbox')
-                      span.fa.fa-check 
-                      | Remove after Drop
-          // END panel
-        .col-md-12.col-sm-6.col-xs-12.co-xs-push-12
-          // START panel
-          .panel.panel-default
-            .panel-heading
-              h3.panel-title Create Event
-            .panel-body
-              .input-group.mb
-                input.form-control.external-event-name(type='text', placeholder="Event name...")
-                .input-group-btn
-                  button.btn.btn-default.external-event-add-btn(type='button') Add
-              p.text-muted: small Choose a Color
-              ul.list-inline.external-event-color-selector
-                li.p0: a.circle.circle-danger.circle-xl.selected(href='#')
-                li.p0: a.circle.circle-primary.circle-xl(href='#')
-                li.p0: a.circle.circle-info.circle-xl(href='#')
-                li.p0: a.circle.circle-success.circle-xl(href='#')
-                li.p0: a.circle.circle-warning.circle-xl(href='#')
-                li.p0: a.circle.circle-green.circle-xl(href='#')
-                li.p0: a.circle.circle-pink.circle-xl(href='#')
-                li.p0: a.circle.circle-inverse.circle-xl(href='#')
-                li.p0: a.circle.circle-purple.circle-xl(href='#')
-
-          // END panel
   // END row
 
 
@@ -70,51 +26,60 @@ h3 Schedule Client Appointments
         .panel-heading
           .panel-title Add a new appointment
         .panel-body
-          form.form-horizontal(role='form', name='appointmentForm', ng-submit='submit()', validate-form='', novalidate='').mb-lg
+          form.form-horizontal(ng-controller='ARScheduleCtrl', role='form', name='appointmentForm', ng-submit='submitForm()', validate-form='', novalidate='').mb-lg
             .form-group
               label.col-sm-4.control-label(for='name') Client name
               .col-sm-8
-                .input-group.m-b
-                  span.input-group-addon
-                    em.icon-user-follow
-                  input#name.form-control(name='name', type='text', required='required')
+                .typeahead-ctrl(ng-controller='ARTypeaheadCtrl')
+                  .input-group.m-b
+                    span.input-group-addon
+                      span.fa.fa-user(ng-show='!loadingClients')
+                      em.fa.fa-refresh(ng-show='loadingClients')
+                    input.form-control#client-name(type='text',
+                      ng-model='client.name',
+                      placeholder='Select or create a client',
+                      typeahead='client for client in getUsers($viewValue)',
+                      typeahead-loading='loadingClients',
+                      required,
+                      typeahead-on-select='onSelect($item, $model, $label)'
+                    )
+
+                  //input#name.form-control(ng-model='client.name', name='name', type='text', required, placeholder='Client name')
             .form-group
               label.col-sm-4.control-label(for='phone-home') Home phone
               .col-sm-8
                 .input-group.m-b
                   span.input-group-addon
                     em.fa.fa-phone
-                  input.form-control#phone-home(name='phone-home', type='text', masked="", data-inputmask="'mask': '(99) 9999-9999'", placeholder="Phone number")
+                  input.form-control#phone-home(ng-model='client.phone', name='phone-home', type='text', masked="", data-inputmask="'mask': '(99) 9999-9999'", placeholder="Phone number")
             .form-group
               label.col-sm-4.control-label(for='mobile') Mobile
               .col-sm-8
                 .input-group.m-b
                   span.input-group-addon
                     em.icon-screen-smartphone
-                  input.form-control#mobile(name='mobile', type='text', masked="", data-inputmask="'mask': '(999) 999-9999'", placeholder="Mobile number")
+                  input.form-control#mobile(ng-model='client.mobile', name='mobile', type='text', masked="", data-inputmask="'mask': '(999) 999-9999'", placeholder="Mobile number")
             .form-group
               label.col-sm-4.control-label(for='email') Email
               .col-sm-8
                 .input-group.m-b
                   span.input-group-addon
                     em.icon-envelope
-                  input#email.form-control(name='email', type='email', data-parsley-type='email')
+                  input#email.form-control(ng-model='client.email', name='email', type='email', data-parsley-type='email', placeholder='Email')
             .form-group
-              label.col-sm-4.control-label(for='reminder-preferences') Reminder preferences
+              label.col-sm-4.control-label(for='reminder-preferences', ng-init='appointment = { phone: true, text: true, email: true }') Reminder preferences
               .col-sm-8
                 .input-group.m-b
-                  label.checkbox-inline.c-checkbox.c-checkbox-rounded
-                    input#pref-phone(type='checkbox', value='phone', checked='')
-                    span.fa.fa-check
-                    |  Voice Call
-                  label.checkbox-inline.c-checkbox.c-checkbox-rounded
-                    input#pref-text(type='checkbox', value='text', checked='')
-                    span.fa.fa-check
-                    |  Text
-                  label.checkbox-inline.c-checkbox.c-checkbox-rounded
-                    input#pref-email(type='checkbox', value='email', checked='')
-                    span.fa.fa-check
-                    |  Email
+                  ul.list-inline
+                    li
+                      input#pref-phone(ng-model='appointment.phone', name='phone', type='checkbox', value='phone')
+                      label(for='pref-phone') Call
+                    li
+                      input#pref-text(ng-model='appointment.text', name='text', type='checkbox', value='text')
+                      label(for='pref-text') Text
+                    li
+                      input#pref-email(ng-model='appointment.email', name='email', type='checkbox', value='email')
+                      label(for='pref-email') Email
             .form-group
               label.col-sm-4.control-label(for='script') Script to use
               .col-sm-8
@@ -130,15 +95,15 @@ h3 Schedule Client Appointments
             .form-group
               label.col-sm-4.control-label(for='reminder-timing') Date/Time
               .col-sm-8
-                p.form-control-static {{ dateTime }}
+                p.form-control-static {{ appointment.dateTime }}
             .form-group
               label.col-sm-4.control-label(for='status') Status
               .col-sm-8
-                p.form-control-static {{ status }}
+                input.form-control#status(ng-model='appointment.status', name='status', type='text', disabled='')
             .form-group
               label.col-sm-4.control-label(for='recurring') Recurring
               .col-sm-8
-                p.form-control-static {{ recurring }}
+                p.form-control-static {{ appointment.recurring }}
             //.alert.alert-info
             //  | Hint: Change the time/duration by dragging the appointment after saving.
 
